--- a/css/styles.css
+++ b/css/styles.css
@@ -23,11 +23,8 @@ span	{
 }
 
 
-#main {
-	font-family: 'Ubuntu' sans-serif;
-	
-}
 #main ul {
+	font-family: 'Ubuntu' sans-serif;
     margin-top: 126px;
     margin-bottom: 120px;
     margin-left: 10px;
@@ -58,16 +55,35 @@ h3 {
 	top: 70px;
 	}
 
-	.column_1 h4 {
+.column_1 h4 {
 		margin-bottom: 0;
 		text-align: center;
 	}
 
-	div.column_1 p {
+
+div.column_1 p {
 		font-size: 14px;
 		letter-spacing: -.5px;
 		text-align: justify;
 		padding: 5px 15px 5px 15px;
+	}
+
+.column_2 {
+		background: pink;
+	}
+
+.bottom_bar {
+		background: green;
+}	
+#subnav {
+		text-align: center;
+	}
+
+#subnav li {
+	display: inline;
+	font-size: 16px;
+	margin: 18px;
+
 	}
 	
 
