--- a/css/styles.css
+++ b/css/styles.css
@@ -49,10 +49,9 @@ h3 {
 	border-radius:18%;
 	float:right;
 	font-family: 'Roboto' sans-serif;
-	margin-left: 40px;
 	padding: 15px 20px;
 	position: relative;
-	top: 70px;
+	top: 95px;
 	}
 
 .column_1 h4 {
@@ -70,7 +69,14 @@ div.column_1 p {
 
 .column_2 {
 		background: pink;
+		border-radius:10%;
+		float:left;
+		font-family: 'Roboto' sans-serif;
+		padding: 30px 20px;
+		position: relative;
+		top: 10px;
 	}
+	
 
 .bottom_bar {
 		background: green;
