--- a/css/styles.css
+++ b/css/styles.css
@@ -7,15 +7,11 @@ h1	{
 	background: #999;
 	font-family: 'Ubuntu 700' sans-serif;
 	font-weight: 700;
-	font-size: 72px;
+	font-size: 56px;
 	line-height: 56px;
-	margin-bottom: 0;
+	margin: 0 0;
 	padding: 10px;
-	border-radius: 100%;
-	text-align: left;
-	width: 210px;
-	height: 210px;
-
+	
 	}
 
 span	{
@@ -23,17 +19,22 @@ span	{
 }
 
 
+.topbar {
+	float:right;
+}
+
 #main ul {
 	font-family: 'Ubuntu' sans-serif;
-    margin-top: 126px;
-    margin-bottom: 120px;
+	float: right;
+    margin-top: 20px;
+    margin-bottom: 40px;
     margin-left: 10px;
 	} 
 
 #main li {
 	font-size: 22px;
 	display: inline;
-	float: left;
+	float: right;
 	margin: 18px;
 }
 
