--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 /* Your Website Styles */
-body {background:   url("../img/bg.png") #C5C99F;
+body {background:   url("../img/cardboard-bg.jpg") repeat #C5C77F;
 }
 
 h1	{
@@ -9,7 +9,7 @@ h1	{
 	font-weight: 700;
 	font-size: 56px;
 	line-height: 56px;
-	margin: 0 0;
+	margin: 30px 0 10px 0;
 	padding: 10px;
 	
 	}
@@ -17,21 +17,21 @@ h1	{
 span	{
 	letter-spacing: 10px;
 }
-
-
-.topbar {
-	float:right;
+nav#main {
+	margin: 380px 20px 10px 0;
 }
 
 #main ul {
-	font-family: 'Ubuntu' sans-serif;
+	
 	float: right;
     margin-top: 20px;
     margin-bottom: 40px;
     margin-left: 10px;
+    top:200px;
 	} 
 
 #main li {
+	font-family: 'Ubuntu' sans-serif;
 	font-size: 22px;
 	display: inline;
 	float: right;
