--- a/css/styles.css
+++ b/css/styles.css
@@ -7,9 +7,6 @@ header {
 	height: 320px;
 }
 
-.banner {
-
-}
 
 a {
 	text-decoration: none;
@@ -82,44 +79,48 @@ h3 {
 .coasters img {
 	border-radius: 5%;
 	margin: 10px 0;
+	box-shadow: 2px 2px 1px #ccc;
+  -webkit-box-shadow: 2px 2px 1px #ccc;
+  -moz-box-shadow: 2px 2px 1px #ccc;
 }
 
-.column_1 {
-	background: #e5d7d4;
-	border-radius: 15px;
-	float:left;
-	font-family: 'Roboto' sans-serif;
-	margin-bottom: 30px;
-	padding: 40px 40px;
-	position: relative;
-	top: 10px;
-	}
 
-.column_1 h2 {
+.one h2 {
 
 		text-align: left;
 		margin-bottom: 0;
 	}
 
 
-.column_1 p, .column_2 p, .column_3 p {
+.one p, .two p, .three p {
 		font-size: 16px;
-		letter-spacing: -.5px;
-		line-height: 26px;
+		letter-spacing: .3px;
+		line-height: 27px;
 		text-align: justify;
 		padding: 8px 15px 8px 15px;
 	}
 
-.column_2, .column_3 {
+.one, .two, .three {
 		background: #e5d7d4;
 		border-radius: 15px;
 		float:left;
 		font-family: 'Roboto' sans-serif;
-		margin-bottom: 30px;
-		padding: 40px;
+		margin-bottom: 32px;
+		padding: 40px 40px 45px 40px;
 		position: relative;
 	}
 
+.one {
+	margin: 10px 0 30px 0;
+	padding: 40px 40px;
+	position: relative;
+	}
+
+.two a {
+	margin: 10px 15px 10px 35px;
+	position: relative;
+	top: 10px;
+}
 
 	
 
