--- a/css/styles.css
+++ b/css/styles.css
@@ -48,25 +48,31 @@ span	{
 	letter-spacing: 10px;
 }
 nav#main {
-	background: #2F045D;
-	border-radius: 0 0 15px 0;
-	float:right;
-	height: 132px;
-	margin:0;
+  background: url("../img/light_alu.png") repeat #000;
+  height: 132px;
+  max-width: 100%;
+  max-height: 150px;
 }
 
 #main ul {
-	color:#fff;
-	float: right;
-    margin: 34px 100px 0 0;
-	} 
+  
+  margin-top: 0;
+  } 
 
 #main li {
-	font-family: 'Ubuntu' sans-serif;
-	font-size: 22px;
-	display: inline;
-	margin: 18px;
-	top: 10px;
+  color:#000;
+  font-family: 'Ubuntu' sans-serif;
+  font-weight: 700;
+  font-size: 1.5em;
+  line-height: 2em;
+  display: inline;
+  margin: 0% 3%;
+}
+
+
+a {
+ 
+  text-decoration: none;
 }
 
 h2 {font-family: 'Roboto' sans-serif;
