--- a/css/styles.css
+++ b/css/styles.css
@@ -29,23 +29,12 @@ p a {
 
 }
 
-p a:hover {
+a:hover {
 	font-size: 1.05em;
 }
 
 h1	{
-	display: inline-block;
-	color: #808;
-	background: #2F045D;
-	border-radius: 0 0 0 15px;
-	float: left;
-	font-family: 'Ubuntu 700' sans-serif;
-	font-size: 72px;
-	line-height: 56px;
-	margin: 0;
-	padding: 10px;
-	width: 405px;
-	
+	left: -999px;
 	}
 
 img.selfie-right {
@@ -86,11 +75,6 @@ a:link {
 
 a:visited{
 	color: #e6e6e6;
-}
-
-a:hover {
-	color: #F0F0F0;
-	font-size: 1.1em;
 }
 
 
@@ -141,7 +125,9 @@ section.coasters {
 		padding: 2% 3.5%;
 		position: relative;
 	}
-
+.one img {
+	margin-left: 5%;
+}
 
 	
 footer {
@@ -156,6 +142,69 @@ footer {
 .copyright p {
 	text-align: right;
 	padding-right:4%;
+}
+
+/* Smartphones (portrait and landscape) ----------- */
+@media only screen
+and (min-device-width : 320px)
+and (max-device-width : 480px) {
+
+  p{
+  font-size:.3em;
+  color:#fff;
+  font-family: "Roboto";
+  text-align: left;
+  padding-bottom
+}
+.one, .coasters {
+	width:90%;
+}
+.one img {
+	width:25%;
+	margin-left: 1%;
+}
+
+h2, h3 {
+	font-size: 1.1em;
+}
+nav#main {
+  height: 30px;
+}
+#main li {
+  color:#000;
+  font-family: 'Ubuntu' sans-serif;
+  font-weight: 700;
+  font-size: 1em;
+  line-height: 1.5em;
+  display: inline;
+  margin: 0% 3%;
+}
+
+  body {
+    background: url("../img/hexabump.png") repeat #000;
+
+  }
+  .selfie-right {
+  	visibility: hidden;
+  }
+}
+/* iPads (portrait and landscape) ----------- */
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) {
+
+  p{
+  font-size:.35em;
+  color:#fff;
+  font-family: "Roboto";
+  text-align: left;
+  padding-bottom:.25%;
+ }
+  body {
+    background: url("../img/hexabump.png") repeat #000;
+
+  }
+/* Styles */
 }
 
 /* Show Grid */
