--- a/css/styles.css
+++ b/css/styles.css
@@ -4,12 +4,16 @@ body {
 	background: url("../img/hexabump.png") repeat #000;
 	
 }
+
+article {
+	margin: auto 0;
+}
 header {
   background: url("../img/hexabump.png") repeat #000;
   max-width: 100%;
   max-height:200px;
   text-align:center;
-}
+  position:absolute;
 
 img {
   display:inline-block;
